fixes/simplebar-focus: +removed simplebar focus visible outline

--- a/gambitto-frontend/src/styles/index.scss
+++ b/gambitto-frontend/src/styles/index.scss
@@ -1,10 +1,10 @@
-@import './variables.scss';
+@import "./variables.scss";
 
 html {
   margin: 0;
-  font-family: 'VictorMono', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "VictorMono", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   font-weight: $font-weight;
   font-size: $font-size;
   color: $color-primary;
@@ -44,12 +44,22 @@ a {
   background-color: $color-primary;
 }
 
+[data-simplebar]:focus-visible,
+.simplebar-wrapper:focus-visible,
+.simplebar-mask:focus-visible,
+.simplebar-offset:focus-visible,
+.simplebar-content-wrapper:focus-visible,
+.simplebar-content:focus-visible,
+.simplebar-placeholder:focus-visible {
+  outline: none !important;
+}
+
 .textBig {
   font-size: 1.4rem;
 }
 
 .textSmall {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .textBold {
